##
## Copyright (C) 2004-2006  Autodesk, Inc.
## 
## This library is free software; you can redistribute it and/or
## modify it under the terms of version 2.1 of the GNU Lesser
## General Public License as published by the Free Software Foundation.
## 
## This library is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## Lesser General Public License for more details.
## 
## You should have received a copy of the GNU Lesser General Public
## License along with this library; if not, write to the Free Software
## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
##

AUTOMAKE_OPTIONS = foreign

SUBDIRS = Src Inc

EXTRA_DIST = \
  TestData/SetupTestData.perl  \
  TestData/Australia/Defect64335202A.txt  \
  TestData/Australia/Defect64335202.dbf  \
  TestData/Australia/Defect64335202.shp  \
  TestData/Australia/Defect64335202.shx  \
  TestData/Australia/Parcels.dbf  \
  TestData/Australia/Parcels.prj  \
  TestData/Australia/Parcels.shp  \
  TestData/Australia/Parcels.shx  \
  TestData/Australia/roads.dbf  \
  TestData/Australia/roads_readme.txt  \
  TestData/Australia/roads.sbn  \
  TestData/Australia/roads.sbx  \
  TestData/Australia/roads.shp  \
  TestData/Australia/roads.shx  \
  TestData/Australia/Soils.dbf  \
  TestData/Australia/Soils.prj  \
  TestData/Australia/Soils.shp  \
  TestData/Australia/Soils.shx  \
  TestData/Metadcov/Trees.dbf  \
  TestData/Metadcov/Trees.prj  \
  TestData/Metadcov/Trees.shp  \
  TestData/Metadcov/Trees.shx