#------------------configure.in----------------------------------------
dnl Configure.in for OSGeo FDO GenericRdbms Providers - MySQL and ODBC
#----------------------------------------------------------------------
# Variables
# Following are the makefile directories 
#----------------------------------------------------------------------
AC_INIT(FDO,3.2,https://fdordbms.osgeo.org)
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE

AC_PREFIX_DEFAULT(/usr/local/fdo-3.2.0)

AC_LANG_C
AC_PROG_CC
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_YACC
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_SUBST(VERSION, "3.2.0")

# Check for Debug or Release build settings
AC_ARG_ENABLE([debug],
               MAP_HELP_STRING([--enable-debug],
              	             [enable debug build [[default=no]]]),
	      	             [enable_debug=$enableval],
	      	             [enable_debug=no])

if test $enable_debug = yes; then
 AC_MSG_NOTICE([Using debug configuration])
 CXXFLAGS="-g -MMD -MT "
 AC_SUBST(CXXFLAGS, ["-g -MMD -MT "])
 CXXFLAGS_SDF="-g "
 AC_SUBST(CXXFLAGS_SDF, ["-g "])
else
 AC_MSG_NOTICE([Using optimized configuration])
 CXXFLAGS="-MMD -MT "
 AC_SUBST(CXXFLAGS, ["-MMD -MT "])
 CXXFLAGS_SDF=""
 AC_SUBST(CXXFLAGS_SDF, [""])
fi

##output Makefiles##
AC_CONFIG_FILES(Makefile)

#############################################
## Providers
#############################################

#MySQL
AC_CONFIG_FILES([com/Makefile \
                 Docs/Makefile \
                 Inc/Makefile \
                 Nls/Makefile \
                 Src/Makefile \
                 Src/Fdo/Makefile \
                 Src/Fdo/Capability/Makefile \
                 Src/Fdo/Connection/Makefile \
                 Src/Fdo/Custom/Makefile \
                 Src/Fdo/DataStore/Makefile \
                 Src/Fdo/FeatureCommands/Makefile \
                 Src/Fdo/Filter/Makefile \
                 Src/Fdo/Lock/Makefile \
                 Src/Fdo/Lt/Makefile \
                 Src/Fdo/Other/Makefile \
                 Src/Fdo/Pvc/Makefile \
                 Src/Fdo/Schema/Makefile \
                 Src/Fdo/SpatialContext/Makefile \
                 Src/Gdbi/Makefile \
                 Src/Geometry/Makefile \
                 Src/Geometry/Fgf/Makefile \
                 Src/LongTransactionManager/Makefile \
                 Src/MySQL/Makefile \
                 Src/MySQL/Driver/Makefile \
                 Src/MySQL/Fdo/Makefile \
                 Src/MySQL/SchemaMgr/Makefile \
                 Src/MySQL/SchemaMgr/Lp/Makefile \
                 Src/MySQL/SchemaMgr/Ov/Makefile \
                 Src/MySQL/SchemaMgr/Ph/Makefile \
                 Src/MySQL/SchemaMgr/Ph/Rd/Makefile \
                 Src/Rdbi/Makefile \
                 Src/SchemaMgr/Makefile \
                 Src/SchemaMgr/Lp/Makefile \
                 Src/SchemaMgr/Ov/Makefile \
                 Src/SchemaMgr/Ph/Makefile \
                 Src/SchemaMgr/Ph/Cfg/Makefile \
                 Src/SchemaMgr/Ph/Rd/Makefile \
                 Src/Util/Makefile])

#ODBCDriver
AC_CONFIG_FILES([Src/ODBCDriver/Makefile])

#ODBC
AC_CONFIG_FILES([Src/ODBC/Makefile \
		     Src/ODBC/Fdo/Makefile \
		     Src/ODBC/SchemaMgr/Makefile \
		     Src/ODBC/SchemaMgr/Lp/Makefile \
		     Src/ODBC/SchemaMgr/Ov/Makefile \
		     Src/ODBC/SchemaMgr/Ph/Makefile \
		     Src/ODBC/SchemaMgr/Ph/Rd/Makefile])


AC_OUTPUT

