##
## Copyright (C) 2004-2007  Autodesk, Inc.
## 
## This library is free software; you can redistribute it and/or
## modify it under the terms of version 2.1 of the GNU Lesser
## General Public License as published by the Free Software Foundation.
## 
## This library is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## Lesser General Public License for more details.
## 
## You should have received a copy of the GNU Lesser General Public
## License along with this library; if not, write to the Free Software
## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
##

#------------------configure.in----------------------------------------
dnl Configure.in for OSGeo FDO PostGIS Provider
#----------------------------------------------------------------------
# Variables
# Following are the makefile directories 
#----------------------------------------------------------------------
AC_INIT(FDOPOSTGIS,3.6.0,http://fdo.osgeo.org)
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE

AC_PREFIX_DEFAULT(/usr/local/fdo-3.6.0)

AC_LANG_C
AC_PROG_CC
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_YACC
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_SUBST(VERSION, "3.6.0")

# Check for Debug or Release build settings
AC_ARG_ENABLE([debug],
              MAP_HELP_STRING([--enable-debug], [enable debug build [[default=no]]]),
              [enable_debug=$enableval],
              [enable_debug=no])

if test $enable_debug = yes; then
    AC_MSG_NOTICE([Using debug configuration])
    CXXFLAGS="-g -MMD -MT "
    AC_SUBST(CXXFLAGS, ["-g -MMD -MT "])
else
    AC_MSG_NOTICE([Using optimized configuration])
    CXXFLAGS="-MMD -MT "
    AC_SUBST(CXXFLAGS, ["-O2 -MMD -MT "])
fi

##output Makefiles##
AC_CONFIG_FILES(Makefile)

AC_CONFIG_FILES([\
Inc/Makefile \
Src/Makefile \
Src/Message/Makefile \
Src/Overrides/Makefile \
Src/Provider/Makefile])

AC_CONFIG_FILES(Doc/Makefile)

AC_OUTPUT
