AUTOMAKE_OPTIONS = foreign

SUBDIRS = Src Inc

DIST_SUBDIRS = Src Docs Inc

EXTRA_DIST = \
build.bat \
build_linux.sh \
methods.vbs \
preparebuilds.wsf \
Managed/Project/MgShapeOverrides.vcproj \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/AssemblyInfo.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgColumnDefinition.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPropertyDefinitionCollection.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/resource.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/AssemblyVersion.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgColumnDefinition.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPropertyDefinitionCollection.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/stdafx.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgClassCollection.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgObjectFactory.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPropertyDefinition.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/stdafx.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgClassCollection.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgObjectFactory.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPropertyDefinition.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgClassDefinition.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPhysicalSchemaMapping.cpp \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/MgShapeOverrides.rc \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgClassDefinition.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/mgPhysicalSchemaMapping.h \
Managed/Src/OSGeo/FDO/Providers/SHP/Override/Namespace.h \
TestData/clean \
TestData/clean.cmd \
TestData/Florida/plss24.dbf \
TestData/Florida/plss24.prj \
TestData/Florida/plss24.sbn \
TestData/Florida/plss24.sbx \
TestData/Florida/plss24.shp \
TestData/Florida/plss24.shp.xml \
TestData/Florida/plss24.shx \
TestData/Florida/readme.txt \
TestData/Hawaii/coast_n83.dbf \
TestData/Hawaii/coast_n83.met \
TestData/Hawaii/coast_n83.prj \
TestData/Hawaii/coast_n83.shp \
TestData/Hawaii/coast_n83.shx \
TestData/Hawaii/coast_n83.txt \
TestData/Nanboku/Nanboku_3dLine.dbf \
TestData/Nanboku/Nanboku_3dLine.sbn \
TestData/Nanboku/Nanboku_3dLine.sbx \
TestData/Nanboku/Nanboku_3dLine.shp \
TestData/Nanboku/Nanboku_3dLine.shx \
TestData/Oahu/coundist01_n83.dbf \
TestData/Oahu/coundist01_n83.prj \
TestData/Oahu/coundist01_n83.shp \
TestData/Oahu/coundist01_n83.shx \
TestData/Oahu/coundist01_n83.txt \
TestData/Ontario/lakes.dbf \
TestData/Ontario/lakes.sbn \
TestData/Ontario/lakes.sbx \
TestData/Ontario/lakes.shp \
TestData/Ontario/lakes.shx \
TestData/Ontario/ontario.dbf \
TestData/Ontario/ontario.sbn \
TestData/Ontario/ontario.sbx \
TestData/Ontario/ontario.shp \
TestData/Ontario/ontario.shx \
TestData/Ontario/readme.txt \
TestData/Ontario/roads.dbf \
TestData/Ontario/roads.sbn \
TestData/Ontario/roads.sbx \
TestData/Ontario/roads.shp \
TestData/Ontario/roads.shx \
TestData/Ontario/ShpMixedDecimals.dbf \
TestData/Ontario/ShpMixedDecimals.sbn \
TestData/Ontario/ShpMixedDecimals.sbx \
TestData/Ontario/ShpMixedDecimals.shp \
TestData/Ontario/ShpMixedDecimals.shx \
TestData/Sheboygan/BuildingOutlines.dbf \
TestData/Sheboygan/BuildingOutlines.prj \
TestData/Sheboygan/BuildingOutlines.shp \
TestData/Sheboygan/BuildingOutlines.shx \
TestData/Sheboygan/CityLimits.dbf \
TestData/Sheboygan/CityLimits.prj \
TestData/Sheboygan/CityLimits.shp \
TestData/Sheboygan/CityLimits.shx \
TestData/Sheboygan/HydrographicLines.dbf \
TestData/Sheboygan/HydrographicLines.prj \
TestData/Sheboygan/HydrographicLines.shp \
TestData/Sheboygan/HydrographicLines.shx \
TestData/Sheboygan/HydrographicPolygons.dbf \
TestData/Sheboygan/HydrographicPolygons.prj \
TestData/Sheboygan/HydrographicPolygons.shp \
TestData/Sheboygan/HydrographicPolygons.shx \
TestData/Sheboygan/Islands.dbf \
TestData/Sheboygan/Islands.prj \
TestData/Sheboygan/Islands.shp \
TestData/Sheboygan/Islands.shx \
TestData/Sheboygan/LandUse.dbf \
TestData/Sheboygan/LandUse.prj \
TestData/Sheboygan/LandUse.shp \
TestData/Sheboygan/LandUse.shx \
TestData/Sheboygan/Parcels.dbf \
TestData/Sheboygan/Parcels.prj \
TestData/Sheboygan/Parcels.shp \
TestData/Sheboygan/Parcels.shx \
TestData/Sheboygan/Rail.dbf \
TestData/Sheboygan/Rail.prj \
TestData/Sheboygan/Rail.shp \
TestData/Sheboygan/Rail.shx \
TestData/Sheboygan/RoadCenterLines.dbf \
TestData/Sheboygan/RoadCenterLines.prj \
TestData/Sheboygan/RoadCenterLines.shp \
TestData/Sheboygan/RoadCenterLines.shx \
TestData/Sheboygan/Soils.dbf \
TestData/Sheboygan/Soils.prj \
TestData/Sheboygan/Soils.shp \
TestData/Sheboygan/Soils.shx \
TestData/Sheboygan/Trees.dbf \
TestData/Sheboygan/Trees.prj \
TestData/Sheboygan/Trees.shp \
TestData/Sheboygan/Trees.shx \
TestData/Sheboygan/VotingDistricts.dbf \
TestData/Sheboygan/VotingDistricts.prj \
TestData/Sheboygan/VotingDistricts.shp \
TestData/Sheboygan/VotingDistricts.shx \
TestData/States/statesp020.dbf \
TestData/States/statesp020.met \
TestData/States/statesp020.prj \
TestData/States/statesp020.shp \
TestData/States/statesp020.shx \
TestData/World/readme.txt \
TestData/World/world_adm0.shp \
TestData/Zones/ZONES.DBF \
TestData/Zones/ZONES.SHP
